tests/snapshots/regression-spool-leshak_skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                    = Leshak
ship/scanStrength                            = 33.600000
ship/passiveShieldEffectiveRechargeRate      = 8.850575
ship/passiveShieldRechargeRate               = 6.416667
ship/ehp                                     = 44444.729975
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.162500
ship/armorKineticDamageEffectiveResonance    = 0.187500
ship/armorExplosiveDamageEffectiveResonance  = 0.200000
ship/armorEmDamageEffectiveResonance         = 0.125000
ship/shieldEhp                               = 6637.930953
ship/hullEhp                                 = 16417.910039
ship/armorEhp                                = 21388.888983
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.675000
ship/damagePerSecondWithReload               = 1479.676609
ship/damagePerSecondWithoutReload            = 1479.676616
ship/damageAlpha                             = 2045.504954
ship/powerFree                               = 5194.000000
ship/cpuFree                                 = 452.750000
ship/capacitorDepletesIn                     = 384.000000
ship/capacitorPeakDeltaPercentage            = -52.954544
ship/capacitorPeakDelta                      = -14.562500
ship/capacitorPeakLoad                       = 42.062500
ship/capacitorPeakRecharge                   = 27.500000
ship/alignTime                               = 11.897109
ship/hp                                      = 11000.000000
ship/powerOutput                             = 21250.000000
ship/powerLoad                               = 16056.000000
ship/maxVelocity                             = 156.250000
ship/cpuOutput                               = 781.250000
ship/cpuLoad                                 = 328.500000
ship/rechargeRate                            = 750000.000000
ship/agility                                 = 0.110025
ship/maxTargetRange                          = 108750.000000
ship/scanSpeed                               = 5625.000000
ship/warpCapacitorNeed                       = 0.000000
ship/scanRadarStrength                       = 33.600000
ship/shieldCapacity                          = 4812.500000
ship/armorHP                                 = 14437.500000
ship/maxResearchGangSize                     = 30.000000
ship/shieldRechargeRate                      = 1875000.000000
ship/capacitorCapacity                       = 8250.000000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/scanResolution                          = 162.500000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/shipBonusPBS1                           = -25.000000
ship/shipBonusPBS2                           = 25.000000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

high_1/type                         = Supratidal Entropic Disintegrator II
high_1/state                        = active
high_1/spoolMultiplierBonus         = 2.125000
high_1/spoolMultiplier              = 3.125000
high_1/damageVolley                 = 2045.504954
high_1/speedWithReload              = 4320.000020
high_1/speedOfReload                = 0.000020
high_1/damagePerSecondWithReload    = 1479.676609
high_1/damagePerSecondWithoutReload = 1479.676616
high_1/chargeAmount                 = 500.000011
high_1/capacitorPeakLoad            = 10.000000
high_1/cycleTime                    = 4320.000000
high_1/capacitorNeed                = 43.199999
high_1/power                        = 15660.000000
high_1/cpu                          = 256.500000
high_1/speed                        = 4320.000000
high_1/maxRange                     = 21150.000840
high_1/damageMultiplier             = 1.897500
high_1/falloff                      = 1.250000
high_1/trackingSpeed                = 5.109375
high_1/entityFlyRange               = 250.000000
high_1/heatDamage                   = 3.000000
high_1/charge/type                  = Occult L
high_1/charge/damageMultiplier      = 1.100000

high_2/type                 = Heavy Mutadaptive Remote Armor Repairer II
high_2/state                = active
high_2/spoolMultiplierBonus = 1.500000
high_2/spoolMultiplier      = 2.500000
high_2/capacitorPeakLoad    = 32.062500
high_2/cycleTime            = 6000.000000
high_2/capacitorNeed        = 192.375000
high_2/maxRange             = 24000.000000
high_2/heatDamage           = 1.500000
