tests/snapshots/regression-spool-nergal_in_game.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                    = Nergal
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 14.000000
ship/passiveShieldEffectiveRechargeRate      = 1.600000
ship/passiveShieldRechargeRate               = 0.900000
ship/ehp                                     = 3967.298619
ship/shieldThermalDamageEffectiveResonance   = 0.125000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.037500
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.060000
ship/armorKineticDamageEffectiveResonance    = 0.180000
ship/armorExplosiveDamageEffectiveResonance  = 0.084000
ship/armorEmDamageEffectiveResonance         = 0.120000
ship/shieldEhp                               = 399.999995
ship/hullEhp                                 = 1044.776093
ship/armorEhp                                = 2522.522531
ship/shieldDamageEffectiveResonance          = 0.562500
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.444000
ship/damagePerSecondWithReload               = 163.071829
ship/damagePerSecondWithoutReload            = 163.071830
ship/damageAlpha                             = 136.079997
ship/powerFree                               = 25.000000
ship/cpuFree                                 = 105.000000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 75.406041
ship/capacitorPeakDelta                      = 4.657432
ship/capacitorPeakLoad                       = 1.519039
ship/capacitorPeakRecharge                   = 6.176471
ship/alignTime                               = 4.193125
ship/powerLoad                               = 30.000000
ship/cpuLoad                                 = 45.000000
ship/armorEmDamageResonance                  = 0.480000
ship/armorExplosiveDamageResonance           = 0.336000
ship/armorKineticDamageResonance             = 0.720000
ship/armorThermalDamageResonance             = 0.240000
ship/shipBonus2AF                            = 0.000000
ship/shipBonusGC                             = 0.000000
ship/shipBonusCC                             = 0.000000
ship/shipBonusMB                             = 0.000000
ship/shipBonusCB                             = 0.000000
ship/shipBonusAB                             = 0.000000
ship/shipBonusMI                             = 0.000000
ship/shipBonusAI                             = 0.000000
ship/shipBonusCI                             = 0.000000
ship/shipBonusGI                             = 0.000000
ship/shipBonusUF1                            = 0.000000
ship/shipBonusUF2                            = 0.000000
ship/shipBonusUC1                            = 0.000000
ship/shipBonusUC2                            = 0.000000
ship/shipBonusUB1                            = 0.000000
ship/shipBonusUB2                            = 0.000000
ship/shipBonusOreDestroyer1                  = 0.000000
ship/shipBonusOreDestroyer2                  = 0.000000
ship/shipBonusOreDestroyer3                  = 0.000000
ship/shipBonusSoEECS1                        = 0.000000
ship/shipBonusSoEECS2                        = 0.000000
ship/shipBonusSoEECS3                        = 0.000000
ship/shipBonusSoEECS4                        = 0.000000
ship/shipBonusSoEECS5                        = 0.000000
ship/shipBonusAB3                            = 0.000000

high_1/type                         = Light Entropic Disintegrator II
high_1/state                        = active
high_1/spoolMultiplierBonus         = 2.550000
high_1/spoolMultiplier              = 3.550000
high_1/damageVolley                 = 136.079997
high_1/speedWithReload              = 2962.400020
high_1/speedOfReload                = 0.000020
high_1/damagePerSecondWithReload    = 163.071829
high_1/damagePerSecondWithoutReload = 163.071830
high_1/chargeAmount                 = 500.000011
high_1/capacitorPeakLoad            = 1.519039
high_1/cycleTime                    = 2962.400000
high_1/speed                        = 2962.400000
high_1/maxRange                     = 4353.750173
high_1/damageMultiplier             = 1.008000
high_1/trackingSpeed                = 307.500000
high_1/entityFlyRange               = 250.000000
high_1/damageMultiplierBonusMax     = 2.550000
high_1/charge/type                  = Occult S

ship                                   = skill Precursor Frigate needs 5 has 1
high_1/Light Entropic Disintegrator II = skill Small Precursor Weapon needs 5 has 0
high_1/Light Entropic Disintegrator II = skill Small Disintegrator Specialization needs 1 has 0
high_1/charge/Occult S                 = skill Small Disintegrator Specialization needs 1 has 0
